Diff: Fix cutoff message

--- a/github-dark.css
+++ b/github-dark.css
@@ -1150,10 +1150,11 @@
 
   /* === Yellow panel === */
   .branch-status.status-pending .discussion-item-icon, .discussion-event-status-renamed .discussion-item-icon,
-  .state-indicator.renamed, .discussion-topic .branch-status.status-pending, .secret .repo-label span, .compare-pr-placeholder {
+  .state-indicator.renamed, .discussion-topic .branch-status.status-pending, .secret .repo-label span, .compare-pr-placeholder,
+  .compare-cutoff, .diff-cutoff {
     background: #383812 !important;
     border-color: #884 !important;
-    color: #884 !important;
+    color: #aa6 !important;
   }
   /* Yellow border (travis) */
   .branch-action-state-unknown .branch-action-body, .branch-action-state-unknown .branch-status,
